--- a/educational-research/src/components/head/index.styl
+++ b/educational-research/src/components/head/index.styl
@@ -7,7 +7,10 @@
         padding 0px 20px;
         height 40px;
         line-height 40px;
-        text-align right;
+        // text-align right;
+        .zhankaiOrshoqi{
+            text-align left;
+        }
     }
     .headrouter{
         padding 0px 20px;
